--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,6 @@ a
 
 }
 
-img
-{
-    width: 300px;
-    height: auto;
-}
-
 .head
 {
     display: flex;
@@ -43,6 +37,7 @@ img
     color: #f9faf8;
     font-weight: bold;
     padding-left: 100px;
+    justify-content: flex-start;
 }
 
 .first
@@ -54,7 +49,7 @@ img
     height: fit-content;
 }
 
-.subFirst
+.ftext
 {
     display: flex;
     width: 400px;
@@ -87,4 +82,60 @@ img
     border: 0;
     color: white;
     font-weight: bold;
+}
+.first .imageholder
+{
+    background-color: slategray;
+    color:#E5e7EB;
+    width: 500px;
+    height: 250px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.second
+{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    align-items: center;
+    padding: 16px 0px 64px 0px;
+}
+
+.items-list
+{
+    width: 80%;
+    display:flex;
+    justify-content: space-evenly;
+    gap: 50px;
+}
+
+.information
+{
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 900;
+    margin-bottom: 32px;
+    margin-left: 170px;
+}
+
+.item-square
+{
+    height:150px;
+    width:150px;
+    border: 4px solid #3882F6;
+    border-radius:20px;
+}
+
+.item-text
+{
+    margin-top: 12px;
+    text-align:center;
+}
+
+.item
+{
+    color: #636363;
+    max-width: 150px;
 }
