--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,7 @@ a
     padding: 24px;
     background-color: #e5e7eb;
 }
+
 .text
 {
     width: 65%;
@@ -175,4 +176,46 @@ a
     font-size: 24px;
     font-weight: 600;
     text-align: right;
+}
+
+.action
+{
+    margin: 100px auto;
+    width: 75%;
+    background-color: #3882F6;
+    border-radius: 10px;
+    padding: 50px 100px;
+    display:flex;
+    justify-content: space-between;
+}
+
+.call
+{
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: 600;
+}
+
+.cta
+{
+    color: #F9FAF8;
+}
+
+.small-button
+{
+    border: 2px solid #F9FAF8;
+    border-radius: 8px;
+    background-color:#3882F6;
+    color:#F9FAF8;
+    font-size:18px;
+    font-weight:300;
+    padding: 8px 36px;
+}
+
+.fourth .box
+{
+    display: flex;
+    max-width: 1000px;
+    margin: 0px auto;
+    padding: 24px;
 }
