--- a/css/style.css
+++ b/css/style.css
@@ -219,3 +219,23 @@ a
     margin: 0px auto;
     padding: 24px;
 }
+
+.foot .box
+{
+    display: flex;
+    width: 100%;
+    margin: 0px auto;
+    padding: 24px;
+    background-color: #1f2937;
+}
+
+.footer
+{
+    display:flex;
+    width: 75%;
+    justify-content: center;
+    align-items:center;
+    margin: 15px;
+    font-size:18px;
+    color:#F9FAF8;
+}
